[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "video-tools"
version = "0.1.0"
description = ""
authors = ["Christofer Bertonha <christoferbertonha@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "video_tools"}]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[tool.black]
line-length = 100
exclude = '''
/(
    \.eggs
  | \.git
)/
'''

[tool.isort]
line_length = 100
multi_line_output = 3
include_trailing_comma = true
default_section = "THIRDPARTY"
known_first_party = "video_tools"
